# FreeAD-DataAcqusitionPipeline-IsaacSim

./: README.md  TODO.txt  keyboard_control.sh  locater.sh  nav.sh  nuscenes_data_collector.sh  online_mapping.sh  prepare_for_next_data_capturing.sh  save_map.sh
NuscenesData copy/: map.json
NuscenesData copy/My_Nuscenes/: calibrated_sensor.json
install/: local_setup.sh  setup.sh
install/robot_hardware/include/: hardware_bridge_interface.hpp  hardware_manager.hpp  wheel.hpp
log/: latest_build
map/: convert.py  map.data  map.pgm  map.yaml  office_occupancy_map.pgm
src/diff_control/: CMakeLists.txt
src/diff_control/hardware/: diffbot_system.cpp
src/keyboard_control/src/: keyboard_control_node.cpp
src/message_filter_test/: CMakeLists.txt  package.xml
src/message_filter_test/src/: message_filter_example.cpp  message_filter_example_apporoximate_time.cpp
src/nuscenes_data_collector/: CMakeLists.txt  README.txt
src/nuscenes_data_collector/config/: nuscenes_data_collector_params.yaml
src/pointcloud_to_laserscan/launch/: sample_pointcloud_to_laserscan_launch.py
src/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
src/robot_hardware/: CMakeLists.txt
src/robot_locate/config/: beifen.yaml  ekf.yaml  mapper_params_online_async.yaml  nav2_params copy.yaml  nav2_params.yaml
tmp/: imu_data_1347_16736919.json  imu_data_1347_70251.json  map.launch.py  sample_data_1127_983392162.json  sample_data_1128_33392164.json
tools/: cam_test.py  fix_isaac_annotation_coord.py
tools/nuscenes_data_collector/: camera_info.txt  vis_pointcloud.py
(+322 files in other folders)
